...
      success_message: "Pedido Confirmado!",
      order_id_label: "Sua senha é:",
      return_home: "Retornando à tela inicial em",
      offline_warning: "Modo Contingência: Dirija-se ao Caixa",
      pre_sale_ticket: "Imprimindo ticket de pré-venda...",
      upsell_title: "Deseja turbinar seu pedido?",
      add_to_cart: "Adicionar",
      finish: "Finalizar Pedido"
    }
  },
  en: {
    navbar: {
      solutions: "Solutions",
...
